font,font size and BUI formatting sync with db

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="formatting-container">
             <div class="subgroup">
                 <select id="font-family" class="font-family">
-                    <option value="">Font </option>
-                    <option value="">Font </option>
-                    <option value="">Font </option>
-                    <option value="">Font </option>
-                    <option value="">Font </option>
-                    <option value="">Font </option>
+                    <option value="Arial">Arial font</option>
+                    <option value="Cambria">Cambaria font</option>
+                    <option value="Georgia">Georgia font</option>
+                    <option value="monospace">Monospace font</option>
+                    <option value="sans-serif">Sans-serif font</option>
+                    <option value="fantasy">Fantasy font</option>
                 </select>
                 <div class="BUI_container">
                     <input type="button" value="B" class="bold">
@@ -32,12 +32,12 @@
             </div>
             <div class="subgroup">
                 <select id="font-size" class="font-size">
-                    <option value="8">8</option>
                     <option value="10">10</option>
                     <option value="12">12</option>
                     <option value="16">16</option>
                     <option value="20">20</option>
                     <option value="32">32</option>
+                    <option value="64">64</option>
                 </select>
                 <div class="color-container">
                     <input type="color" id="color">
